# Hearing-Apps

./: README.md  amplification.py  amplificationTesting.py  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: v1.0.0.aab  v1.0.1.aab  v1.0.19.aab  v1.0.20.aab
app/src/androidTest/java/com/example/frontendhearingampapp/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/hearingamp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hearingamp.cpp
app/src/main/java/com/auditapp/hearingamp/: AudioProcessingService.java  CalibrationActivity.java  ExpandableListAdapter.java  MainActivity.java  RealTimeAmplificationActivity.java  TestActivity.java  TestMCLActivity.java  TestMCLInstructionActivity.java  TestResult.java  TestThresholdActivity.java  TestThresholdInstructionActivity.java  ViewResultsActivity.java
app/src/main/res/anim/: shake.xml
app/src/main/res/layout/: activity_calibration.xml  activity_main.xml  activity_practice.xml  activity_real_time_amplification.xml  activity_test.xml  activity_test__threshold_instruction.xml  activity_test_actual.xml  activity_test_mcl.xml  activity_test_mcl_instruction.xml  activity_viewresults.xml  item_test_result.xml  list_group.xml  list_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-fr-rFR/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
